amelioration of the design

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,1 +1,58 @@
 @import 'config';
+
+
+.interface-area {
+    width: 100vw;
+    height: 722px;
+    border: 1px solid black;
+    padding: 40px;
+
+    h1 {
+        font-family: $font-title;
+        font-size: 55px;
+        //padding: 40px 0 45px 0;
+    }
+
+    hr {
+        color: $color-hr;
+    }
+
+    .text-area {
+        display: flex;
+        flex-direction: row;
+        font-family: $font-text;
+        font-size: 20px;
+        align-items: center;
+        margin-top: 40px;
+
+
+        .list {
+
+            li {
+                .list-items {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                    height: 64px;
+                    width: 880px;
+                    padding: 12px
+                }
+    
+                :hover {
+                    border: 2px solid $color-text;
+                    border-radius: 5px;
+                    background-color: $color-link;
+                }
+            }
+        }
+
+        .job-title {
+            margin-left: 315px;
+
+            p {
+                padding: 20px 0;
+            }
+        }
+    }
+}
