--- a/css/index.css
+++ b/css/index.css
@@ -4,4 +4,50 @@
   padding: 0;
 }
 
+li {
+  list-style-type: none;
+}
+
+.interface-area {
+  width: 100vw;
+  height: 722px;
+  border: 1px solid black;
+  padding: 40px;
+}
+.interface-area h1 {
+  font-family: "Playfair", serif;
+  font-size: 55px;
+}
+.interface-area hr {
+  color: #FEFEFE;
+}
+.interface-area .text-area {
+  display: flex;
+  flex-direction: row;
+  font-family: "Barlow", sans-serif;
+  font-size: 20px;
+  align-items: center;
+  margin-top: 40px;
+}
+.interface-area .text-area .list li .list-items {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 64px;
+  width: 880px;
+  padding: 12px;
+}
+.interface-area .text-area .list li :hover {
+  border: 2px solid #11053B;
+  border-radius: 5px;
+  background-color: #FFD400;
+}
+.interface-area .text-area .job-title {
+  margin-left: 315px;
+}
+.interface-area .text-area .job-title p {
+  padding: 20px 0;
+}
+
 /*# sourceMappingURL=index.css.map */
