--- a/scss/index.scss
+++ b/scss/index.scss
@@ -10,7 +10,7 @@
     h1 {
         font-family: $font-title;
         font-size: 55px;
-        //padding: 40px 0 45px 0;
+        padding-bottom: 45px;
     }
 
     hr {
@@ -21,7 +21,7 @@
         display: flex;
         flex-direction: row;
         font-family: $font-text;
-        font-size: 20px;
+        font-size: 24px;
         align-items: center;
         margin-top: 40px;
 
